--- a/src/gospelcenter/AdminBundle/Resources/views/Guide/list.html.twig
+++ b/src/gospelcenter/AdminBundle/Resources/views/Guide/list.html.twig
@@ -1,7 +1,7 @@
 {% extends "::adminLocalNew.html.twig" %}
 
 {% block title %}
-    {{ parent() }} - Guide
+    {{ parent() }} - {{ 'gc.admin.title.guide'|trans }}
 {% endblock %}
 
 {% block body %}
