--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/youth.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }} - Youth
 {% endblock %}
 
-{% block adminTitle %}<h1>Youth's pages</h1>{% endblock %}
+{% block adminTitle %}<h1>{{ 'gc.admin.title.youth_pages'|trans }}</h1>{% endblock %}
 
 {% block adminListBody %}
     <table class="main">
