--- a/app/Resources/views/admin/paramAdminLocal.html.twig
+++ b/app/Resources/views/admin/paramAdminLocal.html.twig
@@ -1,3 +1,3 @@
-<li><a href="{{ path('fos_user_registration_register') }}">Register a user</a></li>
+{#<li><a href="{{ path('fos_user_registration_register') }}">Register a user</a></li>#}
 <li><a href="{{ path('gospelcenterPage_home', {'center': center.ref}) }}">Back to website</a></li>
 <li class="line"></li>
