--- a/app/Resources/views/adminLocalNew.html.twig
+++ b/app/Resources/views/adminLocalNew.html.twig
@@ -8,20 +8,20 @@
 
 {% block header_nav %}
     <li><a href="{{ path('gospelcenterAdmin_celebrations', {'center': center.ref}) }}"
-           {% if page == 'celebrations' %}class="current focus"{% endif %}>Celebrations</a></li>
+           {% if page == 'celebrations' %}class="current focus"{% endif %}>{{ 'gc.admin.nav.celebrations'|trans }}</a></li>
     <li><a href="{{ path('gospelcenterAdmin_persons', {'center': center.ref}) }}"
-           {% if page == 'people' %}class="current focus"{% endif %}>Contacts</a></li>
+           {% if page == 'people' %}class="current focus"{% endif %}>{{ 'gc.admin.nav.contacts'|trans }}</a></li>
     <li><a href="{{ path('gospelcenterAdmin_events', {'center': center.ref}) }}"
-           {% if page == 'events' %}class="current focus"{% endif %}>Events</a></li>
+           {% if page == 'events' %}class="current focus"{% endif %}>{{ 'gc.admin.nav.events'|trans }}</a></li>
     <li><a href="{{ path('gospelcenterAdmin_pages', {'center': center.ref}) }}"
-           {% if page == 'pages' %}class="current focus"{% endif %}>Pages</a></li>
+           {% if page == 'pages' %}class="current focus"{% endif %}>{{ 'gc.admin.nav.pages'|trans }}</a></li>
 
     <li><a href="{{ path('gospelcenterAdmin_ads', {'center': center.ref}) }}"
-           {% if page == 'ads' %}class="current focus"{% endif %}>Ads</a></li>
+           {% if page == 'ads' %}class="current focus"{% endif %}>{{ 'gc.admin.nav.ads'|trans }}</a></li>
 
     <li><a href="{{ path('gospelcenterAdmin_locations', {'center': center.ref}) }}"
-           {% if page == 'options' %}class="current focus"{% endif %}>Other</a></li>
+           {% if page == 'options' %}class="current focus"{% endif %}>{{ 'gc.admin.nav.other'|trans }}</a></li>
 
     <li><a href="{{ path('gospelcenterAdmin_guides', {'center': center.ref}) }}"
-           {% if page == 'guides' %}class="current focus"{% endif %}>Guide</a></li>
+           {% if page == 'guides' %}class="current focus"{% endif %}>{{ 'gc.admin.nav.guide'|trans }}</a></li>
 {% endblock %}
