--- a/src/gospelcenter/AdminBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/AdminBundle/Resources/views/Celebration/list.html.twig
@@ -1,22 +1,22 @@
 {% extends "::adminLocalNew.html.twig" %}
 
 {% block title %}
-    {{ parent() }} - Celebrations
+    {{ parent() }} - {{ 'gc.admin.title.celebrations'|trans }}
 {% endblock %}
 
-{% block adminTitle %}<h1>Celebrations</h1>{% endblock %}
+{% block adminTitle %}<h1>{{ 'gc.admin.title.celebrations'|trans }}</h1>{% endblock %}
 
 {% block adminTools %}
-    <a href="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}" class="add">Add a celebration</a>
+    <a href="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}" class="add">{{ 'gc.admin.title.add'|trans }}</a>
 {% endblock %}
 
 {% block adminListBody %}
     <table class="main">
         <thead>
         <tr>
-            <th data-sort="int" data-sort-default="desc">Date<span>Date<div class="arrow"></div></span></th>
-            <th data-sort="int">Time<span>Time<div class="arrow"></div></span></th>
-            <th data-sort="string">Speaker<span>Speaker<div class="arrow"></div></span></th>
+            <th data-sort="int" data-sort-default="desc">{{ 'gc.admin.celebrations.date'|trans }}<span>{{ 'gc.admin.celebrations.date'|trans }}<div class="arrow"></div></span></th>
+            <th data-sort="int">{{ 'gc.admin.celebrations.time'|trans }}<span>{{ 'gc.admin.celebrations.time'|trans }}<div class="arrow"></div></span></th>
+            <th data-sort="string">{{ 'gc.admin.celebrations.speakers'|trans }}<span>{{ 'gc.admin.celebrations.speakers'|trans }}<div class="arrow"></div></span></th>
         </tr>
         </thead>
         <tbody>
@@ -28,12 +28,12 @@
                 {% endif %}{% if date(celebration.date.start) < date("+6days") %}class="today"{% endif %}>
                 <td class="em" data-sort-value="{{ celebration.date.start|date('U') }}">
                     <a href="{{ link }}">
-                        <span>{{ celebration.date.start|date('d F Y') }}</span>
+                        <span>{{ celebration.date.start|localizeddate('long', 'none') }}</span>
                     </a>
                 </td>
                 <td data-sort-value="{{ celebration.date.start|date('Hi') }}{{ celebration.date.start|date('U') }}">
                     <a href="{{ link }}">
-                        <span>{{ celebration.date.start|date('H:i') }} - {{ celebration.date.end|date('H:i') }}</span>
+                        <span>{{ celebration.date.start|localizeddate('none', 'short') }} - {{ celebration.date.end|localizeddate('none', 'short') }}</span>
                     </a>
                 </td>
                 <td>
