--- a/src/gospelcenter/EventBundle/Resources/views/Admin/edit.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Admin/edit.html.twig
@@ -9,10 +9,10 @@
 {% endblock %}
 
 {% block title %}
-    {{ parent() }} - Edit an event
+    {{ parent() }} - {{ 'gc.admin.events.edit'|trans }}
 {% endblock %}
 
-{% block adminTitle %}<h1>Edit an event</h1>{% endblock %}
+{% block adminTitle %}<h1>{{ 'gc.admin.events.edit'|trans }}</h1>{% endblock %}
 
 {% block adminBack %}
     <a class="back" href="{{ path('gospelcenterAdmin_events', {'center': center.ref}) }}">Events</a>
@@ -36,11 +36,11 @@
             <nav class="sub_nav">
 
                 <ul>
-                    <li><a href="#general" class="current focus">General</a></li>
-                    <li><a href="#dates" class="">Dates</a></li>
-                    <li><a href="#images">Images</a></li>
-                    <li><a href="#links">Links</a></li>
-                    <li><a href="#video">Video</a></li>
+                    <li><a href="#general" class="current focus">{{ 'gc.admin.events.tab.general'|trans }}</a></li>
+                    <li><a href="#dates" class="">{{ 'gc.admin.events.tab.dates'|trans }}</a></li>
+                    <li><a href="#images">{{ 'gc.admin.events.tab.images'|trans }}</a></li>
+                    <li><a href="#links">{{ 'gc.admin.events.tab.links'|trans }}</a></li>
+                    <li><a href="#video">{{ 'gc.admin.events.tab.video'|trans }}</a></li>
                 </ul>
             </nav>
 
@@ -116,7 +116,7 @@
 
         {{ form_rest(form) }}
 
-        <input type="submit" class="buttonLink" value="Save changes"/>
+        <input type="submit" class="buttonLink" value="{{ 'gc.admin.generic.save'|trans }}"/>
 
     </form>
 
