--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
@@ -23,8 +23,8 @@
 
 {% block adminTools %}
     <a href="{{ path('gospelcenterAdmin_persons_delete', {'center': center.ref, 'person': person.id}) }}"
-       class="delete">Delete</a>
-    <a href="{{ path('gospelcenterAdmin_persons', {'center': center.ref}) }}">Cancel</a>
+       class="delete">{{ 'gc.admin.generic.delete'|trans }}</a>
+    <a href="{{ path('gospelcenterAdmin_persons', {'center': center.ref}) }}">{{ 'gc.admin.generic.cancel'|trans }}</a>
 {% endblock %}
 
 {% block adminBody %}
@@ -39,9 +39,9 @@
 
             <nav class="sub_nav">
                 <ul>
-                    <li><a href="#general" class="current focus">General</a></li>
-                    <li><a href="#user">User account</a></li>
-                    <li><a href="#notes">Notes</a></li>
+                    <li><a href="#general" class="current focus">{{ 'gc.admin.contacts.tab.general'|trans }}</a></li>
+                    <li><a href="#user">{{ 'gc.admin.contacts.tab.user'|trans }}</a></li>
+                    <li><a href="#notes">{{ 'gc.admin.contacts.tab.notes'|trans }}</a></li>
                 </ul>
             </nav>
 
@@ -79,7 +79,7 @@
                 {{ form_errors(form.email) }}
 
                 <fieldset class="datetime date">
-                    <h2>Birthday</h2>
+                    <h2>{{ 'gc.admin.contacts.birth'|trans }}</h2>
 
                     {{ form_widget(form.dateOfBirth) }}
                     {{ form_errors(form.dateOfBirth) }}
@@ -129,17 +129,17 @@
             </article>
 
             <article class="tab" id="user">
-                {{ form_widget(form.user.username, {'attr': {'placeholder': 'Username'} }) }}
+                {{ form_widget(form.user.username, {'attr': {'placeholder': 'gc.admin.user.username'|trans} }) }}
                 {{ form_errors(form.user.username) }}
 
-                {{ form_widget(form.user.email, {'attr': {'placeholder': 'Email'} }) }}
+                {{ form_widget(form.user.email, {'attr': {'placeholder': 'gc.admin.user.email'|trans} }) }}
                 {{ form_errors(form.user.email) }}
 
                 {% if not person.user %}
-                    {{ form_widget(form.user.plainPassword.first, {'attr': {'placeholder': 'Password'} }) }}
+                    {{ form_widget(form.user.plainPassword.first, {'attr': {'placeholder': 'gc.admin.user.password'|trans} }) }}
                     {{ form_errors(form.user.plainPassword.first) }}
 
-                    {{ form_widget(form.user.plainPassword.second, {'attr': {'placeholder': 'Confirmation'} }) }}
+                    {{ form_widget(form.user.plainPassword.second, {'attr': {'placeholder': 'gc.admin.user.confirmation'|trans} }) }}
                     {{ form_errors(form.user.plainPassword.second) }}
                 {% endif %}
 
@@ -309,7 +309,7 @@
 
         {{ form_rest(form) }}
 
-        <input type="submit" class="buttonLink" value="Save changes"/>
+        <input type="submit" class="buttonLink" value="{{ 'gc.admin.generic.save'|trans }}"/>
 
         </form>
     {% endspaceless %}
