--- a/src/gospelcenter/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/gospelcenter/UserBundle/Resources/views/Security/login.html.twig
@@ -4,11 +4,9 @@
 
 {% block classPage %}{{ parent() }} simpleHeader{% endblock %}
 
-{% trans_default_domain 'FOSUserBundle' %}
-
 {% block body %}
 
-    <h1 class="titlePage"><span>Sign in</span></h1>
+    <h1 class="titlePage"><span>{{ 'gc.security.login'|trans }}</span></h1>
 
     {% if error %}
         <article class="error">
@@ -19,13 +17,13 @@
     <form action="{{ path("fos_user_security_check") }}" method="post">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     
-        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" placeholder="Username" />
+        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" placeholder="{{ 'gc.security.username'|trans }}" />
     
-        <input type="password" id="password" name="_password" required="required" placeholder="Password" />
+        <input type="password" id="password" name="_password" required="required" placeholder="{{ 'gc.security.password'|trans }}" />
     
-        <input type="checkbox" id="remember_me" name="_remember_me" checked="1" value="on" placeholder="Keep me logged in" />
+        <input type="checkbox" id="remember_me" name="_remember_me" checked="1" value="on" placeholder="{{ 'gc.security.keepMe'|trans }}" />
     
-        <input type="submit" id="_submit" name="_submit" class="buttonLink" value="Sign in" />
+        <input type="submit" id="_submit" name="_submit" class="buttonLink" value="{{ 'gc.security.login'|trans }}" />
     </form>
     
 {% endblock %}
