--- a/web/css/form.css
+++ b/web/css/form.css
@@ -1,145 +1,1 @@
-@font-face {
-  font-family: 'Radikal-Light';
-  src: url("../fonts/2B5662_0_0.eot");
-  src: url("../fonts/2B5662_0_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2B5662_0_0.woff") format("woff"), url("../fonts/2B5662_0_0.ttf") format("truetype"); }
-@font-face {
-  font-family: 'Radikal-Black';
-  src: url("../fonts/2B5662_1_0.eot");
-  src: url("../fonts/2B5662_1_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2B5662_1_0.woff") format("woff"), url("../fonts/2B5662_1_0.ttf") format("truetype"); }
-@font-face {
-  font-family: 'Radikal-Bold';
-  src: url("../fonts/2B5662_2_0.eot");
-  src: url("../fonts/2B5662_2_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2B5662_2_0.woff") format("woff"), url("../fonts/2B5662_2_0.ttf") format("truetype"); }
-@font-face {
-  font-family: 'Radikal';
-  src: url("../fonts/2B5662_3_0.eot");
-  src: url("../fonts/2B5662_3_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2B5662_3_0.woff") format("woff"), url("../fonts/2B5662_3_0.ttf") format("truetype"); }
-@font-face {
-  font-family: 'Radikal-UltraThin';
-  src: url("../fonts/2B5662_4_0.eot");
-  src: url("../fonts/2B5662_4_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2B5662_4_0.woff") format("woff"), url("../fonts/2B5662_4_0.ttf") format("truetype"); }
-form input,
-form textarea {
-  resize: none;
-  white-space: normal;
-  word-wrap: normal;
-  font-family: "Radikal-Light", "Radikal", sans-serif;
-  background-color: transparent;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  outline: none;
-  border: 1px solid #878787;
-  min-height: 25px;
-  padding: 2px 4px 2px 5px;
-  font-size: 1.1em; }
-  form input.writeOn,
-  form textarea.writeOn {
-    background-color: transparent;
-    border: none;
-    margin: 1px;
-    color: #363331; }
-  form input.writeOff,
-  form textarea.writeOff {
-    background-color: white;
-    border: 1px solid #878787;
-    margin: 0px;
-    color: #878787; }
-  form input[type=submit],
-  form textarea[type=submit] {
-    background-color: transparent;
-    cursor: pointer;
-    border: 1px solid #d91a15;
-    font-family: "Radikal", sans-serif;
-    color: #d91a15; }
-  form input[type=file],
-  form textarea[type=file] {
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-    outline: none; }
-form div.error_list {
-  position: relative;
-  margin-top: 10px;
-  margin-bottom: 20px; }
-  form div.error_list div.arrow {
-    z-index: 1001;
-    position: absolute;
-    left: 15px;
-    top: -10px; }
-    form div.error_list div.arrow div.arrow_up_border {
-      width: 0;
-      height: 0;
-      border-left: 11px solid transparent;
-      border-right: 11px solid transparent;
-      border-bottom: 10px solid #e22416; }
-    form div.error_list div.arrow div.arrow_up {
-      width: 0;
-      height: 0;
-      border-left: 11px solid transparent;
-      border-right: 11px solid transparent;
-      border-bottom: 10px solid #e22416;
-      margin-left: 0px;
-      margin-top: -9px; }
-  form div.error_list div.list {
-    display: inline-block;
-    background: #d91a15;
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #d11115), color-stop(1, #e22416));
-    background: -ms-linear-gradient(bottom, #d11115, #e22416);
-    background: -moz-linear-gradient(center bottom, #d11115 0%, #e22416 100%);
-    background: -o-linear-gradient(#e22416, #d11115);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled='false', startColorstr=$start, endColorstr=$stop);
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
-    padding: 5px; }
-    form div.error_list div.list span {
-      color: #fdfdfc;
-      display: block; }
-form #editImage {
-  display: block;
-  width: auto;
-  cursor: pointer;
-  margin: 0 auto; }
-  form #editImage div.edit {
-    text-align: center;
-    height: 20px;
-    background-color: #363331;
-    color: #fdfdfc;
-    display: none;
-    position: relative;
-    width: auto;
-    margin-top: -30px;
-    padding-top: 5px;
-    padding-bottom: 5px; }
-  form #editImage img {
-    width: 100%;
-    height: inherit;
-    max-height: inherit;
-    min-height: inherit; }
-  form #editImage:hover div.edit {
-    display: block; }
-form #addImage {
-  display: block;
-  width: 300px;
-  border: 2px dashed #878787;
-  cursor: pointer; }
-  form #addImage.hover {
-    border-color: #d91a15;
-    color: #d91a15; }
-    form #addImage.hover .iconImg {
-      background-image: url("../images/add_image_hover.svg"); }
-  form #addImage .iconImg {
-    display: block;
-    margin: 20px auto 10px;
-    height: 64px;
-    width: 64px;
-    background-image: url("../images/add_image.svg");
-    background-size: 100%; }
-  form #addImage .txt {
-    text-align: center;
-    margin-bottom: 20px; }
+@font-face{font-family:'Radikal-Light';src:url("../fonts/2B5662_0_0.eot");src:url("../fonts/2B5662_0_0.eot?#iefix") format("embedded-opentype"),url("../fonts/2B5662_0_0.woff") format("woff"),url("../fonts/2B5662_0_0.ttf") format("truetype")}@font-face{font-family:'Radikal-Black';src:url("../fonts/2B5662_1_0.eot");src:url("../fonts/2B5662_1_0.eot?#iefix") format("embedded-opentype"),url("../fonts/2B5662_1_0.woff") format("woff"),url("../fonts/2B5662_1_0.ttf") format("truetype")}@font-face{font-family:'Radikal-Bold';src:url("../fonts/2B5662_2_0.eot");src:url("../fonts/2B5662_2_0.eot?#iefix") format("embedded-opentype"),url("../fonts/2B5662_2_0.woff") format("woff"),url("../fonts/2B5662_2_0.ttf") format("truetype")}@font-face{font-family:'Radikal';src:url("../fonts/2B5662_3_0.eot");src:url("../fonts/2B5662_3_0.eot?#iefix") format("embedded-opentype"),url("../fonts/2B5662_3_0.woff") format("woff"),url("../fonts/2B5662_3_0.ttf") format("truetype")}@font-face{font-family:'Radikal-UltraThin';src:url("../fonts/2B5662_4_0.eot");src:url("../fonts/2B5662_4_0.eot?#iefix") format("embedded-opentype"),url("../fonts/2B5662_4_0.woff") format("woff"),url("../fonts/2B5662_4_0.ttf") format("truetype")}form input,form textarea{resize:none;white-space:normal;word-wrap:normal;font-family:"Radikal-Light","Radikal",sans-serif;background-color:transparent;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;outline:none;border:1px solid #878787;min-height:25px;padding:2px 4px 2px 5px;font-size:1.1em}form input.writeOn,form textarea.writeOn{background-color:transparent;border:none;margin:1px;color:#363331}form input.writeOff,form textarea.writeOff{background-color:white;border:1px solid #878787;margin:0px;color:#878787}form input[type=submit],form textarea[type=submit]{background-color:transparent;cursor:pointer;border:1px solid #d91a15;font-family:"Radikal",sans-serif;color:#d91a15}form input[type=file],form textarea[type=file]{background-color:transparent;cursor:pointer;border:none;outline:none}form div.error_list{position:relative;margin-top:10px;margin-bottom:20px}form div.error_list div.arrow{z-index:1001;position:absolute;left:15px;top:-10px}form div.error_list div.arrow div.arrow_up_border{width:0;height:0;border-left:11px solid transparent;border-right:11px solid transparent;border-bottom:10px solid #e22416}form div.error_list div.arrow div.arrow_up{width:0;height:0;border-left:11px solid transparent;border-right:11px solid transparent;border-bottom:10px solid #e22416;margin-left:0px;margin-top:-9px}form div.error_list div.list{display:inline-block;background:#d91a15;background:-webkit-gradient(linear, left bottom, left top, color-stop(0, #d11115), color-stop(1, #e22416));background:-ms-linear-gradient(bottom, #d11115, #e22416);background:-moz-linear-gradient(center bottom, #d11115 0%, #e22416 100%);background:-o-linear-gradient(#e22416, #d11115);filter:progid:DXImageTransform.Microsoft.gradient(enabled='false', startColorstr=$start, endColorstr=$stop);-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;padding:5px}form div.error_list div.list span{color:#fdfdfc;display:block}form #editImage{display:block;width:auto;cursor:pointer;margin:0 auto}form #editImage div.edit{text-align:center;height:20px;background-color:#363331;color:#fdfdfc;display:none;position:relative;width:auto;margin-top:-30px;padding-top:5px;padding-bottom:5px}form #editImage img{width:100%;height:inherit;max-height:inherit;min-height:inherit}form #editImage:hover div.edit{display:block}form #addImage{display:block;width:300px;border:2px dashed #878787;cursor:pointer}form #addImage.hover{border-color:#d91a15;color:#d91a15}form #addImage.hover .iconImg{background-image:url("../images/add_image_hover.svg")}form #addImage .iconImg{display:block;margin:20px auto 10px;height:64px;width:64px;background-image:url("../images/add_image.svg");background-size:100%}form #addImage .txt{text-align:center;margin-bottom:20px}
