--- a/src/gospelcenter/PageBundle/Resources/views/Mail/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Mail/contact.html.twig
@@ -37,11 +37,21 @@
             font-family: 'Radikal-Light', sans-serif;
             font-size: 16px;
             color: #313131;
+            background-color: #EBEBEB;
         }
 
         table.body {
             max-width: 580px;
             margin: 30px auto;
+            width: 100%;
+            background-color: #FDFDFC;
+        }
+
+        table.header,
+        table.main,
+        table.footer {
+            margin: 20px;
+            width: auto;
         }
 
         table {
@@ -120,6 +130,8 @@
         table.footer {
             font-size: 0.75em;
             text-transform: uppercase;
+            margin-bottom: 5px;
+            margin-top: 30px;
         }
 
         table.footer p {
