--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/contact.html.twig
@@ -3,7 +3,7 @@
     <h1 class="titlePage"><span>Contact</span></h1>
 
     <section id="map" class="map_full">
-        <iframe src="http://map.gospel-center.com?geo_url=beta.gospel-center.com/api/locations/{{ center.location.id }}.geojson"></iframe>
+        <iframe src="http://map.gospel-center.com?geo_url=http://beta.gospel-center.com/api/locations/{{ center.location.id }}.geojson"></iframe>
         <article>
             <h1>{{ center.location.name }}</h1>
 
